IE修正 & 新增購物車數字樣式
修正在IE 單一商品頁 左右頁面寬度大小跑版的問題
修正IE上header member panel  & seach panel顯示跑版的問題
新增購物車數字顯示樣式

--- a/dev/_general/header/header.jade
+++ b/dev/_general/header/header.jade
@@ -134,6 +134,10 @@ header#header.isRWD
 
                 span.dropdown_block_wrapper
                     i.fa.fa-shopping-cart(aria-hidden='true')
+                        a.cart-contents
+                            span.amount
+                            span.count 2
+                  
                     #shopping_cart.dropdown_block
                         div
                             .shopping_cart_product      
