--- a/dev/favorite/all.styl
+++ b/dev/favorite/all.styl
@@ -16,6 +16,7 @@
 
     .product_wrapper
         margin-bottom: 50px;
+        flex: 1 0 33.3%;
 
 +media-query( only screen ,max-width ($phone_rwd_width) )
     .side_bar
