--- a/dev/_general/product/product.styl
+++ b/dev/_general/product/product.styl
@@ -11,6 +11,7 @@ $product_name_lineHeight = 18px
     display: flex
     flex-direction: column
     align-items: center
+    flex: 1 0 25%;
     
     .tag
         border-radius: 50%
@@ -128,6 +129,7 @@ $product_name_lineHeight = 18px
         max-width:168px
         width:168px
         //max-width: 164px;
+        flex: 1 0 50%;
 
         .tag
             size: 34px
