--- a/dev/_general/rwd_table/rwd_table.styl
+++ b/dev/_general/rwd_table/rwd_table.styl
@@ -58,6 +58,7 @@
     .rwd-table tbody tr
         height: initial
         margin-bottom: 10px;
+        font-weight: 400;
 
     .rwd-table td
         display: flex;
