--- a/dev/order_detail/all.styl
+++ b/dev/order_detail/all.styl
@@ -62,7 +62,6 @@
 .shop_note
     td
         width: 100%;
-        height: 100px
         line-height: 60px;
 
 /*cancel_detial_table and shop_note - end*/
@@ -200,6 +199,8 @@
 
         span
             margin-right: calc("100% - 300px")
+        .count_price 
+            font-weight: 400;
 /*order_tables*/
 
 +media-query( all, max-width $phone_rwd_width )
