--- a/dev/product_intro/all.styl
+++ b/dev/product_intro/all.styl
@@ -331,6 +331,7 @@ input[type="number"]::-webkit-inner-spin-button {
 
     .product_info_sub_wrapper  
         font-size: 14px
+        font-weight: 400
         .price
             font-size: 26px
 
