前端修正Mobile版型
1.cart/結帳/finish_trade page 跑版修正
2.order頁面 取消訂單dailog 跑版修正

--- a/dev/order_query/all.styl
+++ b/dev/order_query/all.styl
@@ -146,7 +146,8 @@
         width: initial;
 
     #cancel_order_dialog
-            
+        padding: 55px 20px 65px;
+        width: initial
         .cancel_reason
             width: 100%
             resize: none;
