購物金折抵券 改成 購物金記錄
購物金折抵券 改成 購物金記錄

--- a/dev/_general/header/header.jade
+++ b/dev/_general/header/header.jade
@@ -114,7 +114,7 @@ header#header.isRWD
                         li
                             a(href="#") 我的收藏清單
                         li
-                            a(href="#") 購物金折抵券
+                            a(href="#") 購物金記錄
                         li
                             a(href="#") 帳戶設定
                         li
