--- a/dev/_general/member_section/temp_member_section.jade
+++ b/dev/_general/member_section/temp_member_section.jade
@@ -14,7 +14,7 @@ block content
                 block activeIndex
                     -var activeIndex = 0
                 ul
-                    each val, index in ["訂單查詢","我的收藏清單","購物金折抵券","帳戶設定","登出"]
+                    each val, index in ["訂單查詢","我的收藏清單","購物金記錄","帳戶設定","登出"]
                         if index == activeIndex
                             li.active
                                 a(href="")= val
