--- a/dev/cash_coupon/index.jade
+++ b/dev/cash_coupon/index.jade
@@ -3,7 +3,7 @@ extends ../_general/member_section/temp_member_section.jade
 block append content
     
     block navArray
-        -var navArray = ["首頁","會員專區","購物金折抵券"]
+        -var navArray = ["首頁","會員專區","購物金記錄"]
 
 block activeIndex
      -var activeIndex = 2
