--- a/dev/order_query/all.styl
+++ b/dev/order_query/all.styl
@@ -76,6 +76,7 @@
             label
                 margin-left: 10px
                 font-size: 15px
+                text-align: left
 
     .cancel_reason
         background: #FFFFFF;
