修正mobile UI購物車小視窗捲不到結帳按鈕出現
修正mobile UI購物車小視窗捲不到結帳按鈕出現

--- a/dev/_general/header/header.styl
+++ b/dev/_general/header/header.styl
@@ -755,7 +755,9 @@ form.dropdown_block:after
         margin: 0 5px
     
     #shopping_cart
-        width: 100%
+        width:100%
+        height: calc("100vh - "+$header_rwd_height);
+        max-height: 100vh;
         top: 31px;
     //#shopping_cart
         
