修正購物車、panel高度
購物車改成以商品參數呈現為主
panel高度改成動態調整，不寫死

--- a/dev/_general/header/header.jade
+++ b/dev/_general/header/header.jade
@@ -141,58 +141,68 @@ header#header.isRWD
                     #shopping_cart.dropdown_block
                         div
                             .shopping_cart_product      
-                                a                      
+                                a.remove_product_wrapper
                                     img(src="../general/img/shopping_cart_delete.png").remove_product
                                 .shopping_cart_product_info_wrapper
                                     .shopping_cart_product_name Dear Mia 美甲光凝膠-瓶裝 一步膠 色膠-螢光系列 粉紅檸檬汁
                                     .shopping_cart_product_info
-                                        .color 顏色：紅色
+                                        .product_parameter 顏色：紅色
+                                        
+                                    .shopping_cart_product_base_info
                                         .number 數量： 1
-                                    .shopping_cart_product_price $ 580
+                                        .shopping_cart_product_price $ 580
                                 img(src="../general/img/商品圖_cart.png").product_img
 
                             .shopping_cart_product      
-                                a                      
+                                a.remove_product_wrapper
                                     img(src="../general/img/shopping_cart_delete.png").remove_product
                                 .shopping_cart_product_info_wrapper
                                     .shopping_cart_product_name Dear Mia 美甲光凝膠-瓶裝 一步膠 色膠-螢光系列 粉紅檸檬汁
                                     .shopping_cart_product_info
-                                        .color 顏色：紅色
+                                        .product_parameter 顏色：紅色
+                                        
+                                    .shopping_cart_product_base_info
                                         .number 數量： 1
-                                    .shopping_cart_product_price $ 580
+                                        .shopping_cart_product_price $ 580
                                 img(src="../general/img/商品圖_cart.png").product_img
 
                             .shopping_cart_product      
-                                a                      
+                                a.remove_product_wrapper
                                     img(src="../general/img/shopping_cart_delete.png").remove_product
                                 .shopping_cart_product_info_wrapper
                                     .shopping_cart_product_name Dear Mia 美甲光凝膠-瓶裝 一步膠 色膠-螢光系列 粉紅檸檬汁
                                     .shopping_cart_product_info
-                                        .color 顏色：紅色
+                                        .product_parameter 顏色：紅色
+                                        
+                                    .shopping_cart_product_base_info
                                         .number 數量： 1
-                                    .shopping_cart_product_price $ 580
+                                        .shopping_cart_product_price $ 580
                                 img(src="../general/img/商品圖_cart.png").product_img
 
                             .shopping_cart_product      
-                                a                      
+                                a.remove_product_wrapper  
                                     img(src="../general/img/shopping_cart_delete.png").remove_product
                                 .shopping_cart_product_info_wrapper
                                     .shopping_cart_product_name Dear Mia 美甲光凝膠-瓶裝 一步膠 色膠-螢光系列 粉紅檸檬汁
                                     .shopping_cart_product_info
-                                        .color 顏色：紅色
+                                        .product_parameter 顏色：紅色
+                                        
+                                    .shopping_cart_product_base_info
                                         .number 數量： 1
-                                    .shopping_cart_product_price $ 580
+                                        .shopping_cart_product_price $ 580
                                 img(src="../general/img/商品圖_cart.png").product_img
                             
                             .shopping_cart_product                            
-                                a
+                                a.remove_product_wrapper
                                     img(src="../general/img/shopping_cart_delete.png").remove_product
                                 .shopping_cart_product_info_wrapper
                                     .shopping_cart_product_name Dear Mia 美甲光凝膠-瓶裝 一步膠 色膠-螢光系列 粉紅檸檬汁
                                     .shopping_cart_product_info
-                                        .color 顏色：紅色
+                                        .product_parameter 顏色：紅色
+                                        
+                                    .shopping_cart_product_base_info
                                         .number 數量： 1
-                                    .shopping_cart_product_price $ 580
+                                        .shopping_cart_product_price $ 580
                                 img(src="../general/img/商品圖_cart.png").product_img
                         
                         .shopping_cart_calc
