相容iphone上的螢幕放大顯示功能(首頁)
訂閱電子報輸入欄位placeholder垂直置中
以及讓訂閱按鈕去掉padding然後置中

--- a/dev/home/all.styl
+++ b/dev/home/all.styl
@@ -167,6 +167,8 @@ $slide_arrow_side_distance = 25px
             height: inherit
             flex: 1
             padding: 10px 20px
+            padding-right: 0;
+            line-height: initial;
             box-sizing: border-box
 
             +placeholder()
@@ -189,6 +191,7 @@ $slide_arrow_side_distance = 25px
     border-left: 1px solid $pink_medium
     cursor: pointer
     border-radius: 0
+    padding: 0
 
     &:active
         background: white
