修正在iphone上的螢幕放大顯示問題(商品列表)
為了相容iphone 螢幕放大功能，商品列表的圖片在手機顯示時，圖片寬度最大不能超過wrapper

--- a/dev/_general/product/product.styl
+++ b/dev/_general/product/product.styl
@@ -139,6 +139,8 @@ $product_name_lineHeight = 18px
         size: 172px 180px
         size: 168px 177px;
         position: relative;
+        /*為了相容iphone螢幕放大功能加上的*/
+        max-width: 100%;
 
     .product_info
         font-size: 12px
