修正在iphone上的螢幕放大顯示問題(商品介紹頁)
真實價格跟特價價格，強迫不換行顯示

--- a/dev/product_intro/all.styl
+++ b/dev/product_intro/all.styl
@@ -98,7 +98,9 @@ $product_big_photo_rwd_height = 318px
         font-weight: bold
         margin: 29px 0 20px
         &>span
+            /*.ture_price*/
             margin-right: 27px
+            white-space: nowrap;
         
         .fake_price_strikethrough
             text-decoration:line-through
@@ -106,6 +108,7 @@ $product_big_photo_rwd_height = 318px
 
         .fake_price
             color: #4A4A4A
+            white-space: nowrap;
 
 .color_img_list>img
         size: 39px
