更改首頁slide顯示比例
更改首頁slide顯示比例，讓圖片更符合原本設計的比例

--- a/dev/home/all.styl
+++ b/dev/home/all.styl
@@ -42,11 +42,13 @@ $slide_arrow_side_distance = 25px
 .col_center
   width:72%
   order:2
-  padding-bottom:43.12%
+  //padding-bottom:43.12%
+  padding-bottom:40.8%
 
 .row
     width:100%
-    padding-bottom:154%
+    //padding-bottom:154%
+    padding-bottom: 145.7%;
     position:relative
 
     &:hover:after
